fixed new whatsapp image, aligned fork buttons

--- a/public/home/css/site.styl
+++ b/public/home/css/site.styl
@@ -210,10 +210,14 @@ h1,h2,h3,h4,h5
     img
       height: 60px
     
-    span
+    span, iframe
       display: block
       margin-top: 10px
       font-size: 14px
+    
+    iframe
+      width: 75px
+      margin: 10px auto 0
       
   p 
     line-height: 1.8
